--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <div class="topright">
             <h1 class="center">josef heidegger</h1>
-            <h2 class="center">software develpment</h2>
+            <h2 class="center">software development</h2>
             <div class="center">
                 <p> <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
                         href="https://github.com/trailynx">github</a> | <a
