--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <h1 class="center">josef heidegger</h1>
             <h2 class="center">software development</h2>
             <div class="center">
-                <p> <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
+                <p> <a href="202001 Josef Heidegger.pdf" download>CV</a> | 
+                    <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
                         href="https://github.com/trailynx">github</a> | <a
                         href="mailto:josef.heidegger@outlook.at">email</a>
                 </p>
