add basic card design

--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
 
 <body>
     <div>
-        <div class="topright">
+        <div id="card">
+            <img src="DSC_0007_200x300.jpg">
+            <h1 >josef heidegger</h1>
+            <h2 >software development</h2>
+            <div >
+                <p> <a href="202002 Josef Heidegger.pdf" download>cv</a> | 
+                    <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
+                        href="https://github.com/trailynx">github</a> | <a
+                        href="mailto:josef.heidegger@outlook.at">email</a>
+                </p>
+            </div>
+        </div>
+        <!-- <div class="topright">
+            <img class="right" src="DSC_0007_200x300.jpg">
             <h1 class="center">josef heidegger</h1>
             <h2 class="center">software development</h2>
             <div class="center">
