--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
                         href="https://github.com/trailynx">github</a> | <a
                         href="mailto:josef.heidegger@outlook.at">email</a>
                 </p>
-                <!-- | <a href="todo">cv</a> -->
             </div>
-        </div>
+        </div> -->
         <div class="bottom">
             © josef heidegger 2020
         </div>
