--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h1 class="center">josef heidegger</h1>
             <h2 class="center">software development</h2>
             <div class="center">
-                <p> <a href="202001 Josef Heidegger.pdf" download>cv</a> | 
+                <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | 
                     <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
                         href="https://github.com/trailynx">github</a> | <a
                         href="mailto:josef.heidegger@outlook.at">email</a>
                 </p>
             </div>
-        </div> -->
+        </div>
         <div class="bottom">
             © josef heidegger 2020
         </div>
