--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <div>
+        <div id="gradient"></div>
         <div id="card">
             <img src="DSC_0007_200x300.jpg">
             <h1 >josef heidegger</h1>
