--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 >josef heidegger</h1>
             <h2 >software development</h2>
             <div >
-                <p> <a href="202002 Josef Heidegger.pdf" download>cv</a> | 
+                <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | 
                     <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
                         href="https://github.com/trailynx">github</a> | <a
                         href="mailto:josef.heidegger@outlook.at">email</a>
