add meta tags for title and description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sendit.space</title>
+    <meta name="title" content="sendit.space — Josef Heidegger">
+    <meta name="description" content="Accomplished Development Team Lead and Aspiring Engineering Manager">
+
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -13,7 +16,7 @@
     <div>
         <div id="gradient"></div>
         <div id="card">
-            <img src="DSC_0007_200x300.jpg">
+            <img src="DSC_0007_200x300.jpg" alt="Josef Heidegger">
             <h1 >josef heidegger</h1>
             <h2 >software development</h2>
             <div >
