improve layout for narrow devices

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <h1>josef heidegger</h1>
             <h2>software development</h2>
             <div>
-                <p> <a href="CV Josef Heidegger.pdf" download>cv</a> |
-                    <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
+                <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | <a 
+                        href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
                         href="https://github.com/trailynx">github</a> | <a
                         href="mailto:josef.heidegger@outlook.at">email</a>
                 </p>
