switch profile picture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div>
         <div id="gradient"></div>
         <div id="card">
-            <img src="DSC_0007_200x300.jpg" alt="Josef Heidegger">
+            <img src="DSC_0007_146x200_edge.jpg" alt="Josef Heidegger">
             <h1>josef heidegger</h1>
             <h2>software development</h2>
             <div>
