--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="card">
             <img src="DSC_0007_146x200_edge.jpg" alt="Josef Heidegger">
             <h1>josef heidegger</h1>
-            <h2>software development</h2>
+            <h2>software engineering lead <br/> & certified scrumMaster</h2>
             <div>
                 <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | <a 
                         href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
