Update job description

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sendit.space</title>
     <meta name="title" content="sendit.space — Josef Heidegger">
-    <meta name="description" content="Accomplished Development Team Lead and Aspiring Engineering Manager">
+    <meta name="description" content="Software Engineering Manager">
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -19,7 +19,7 @@
         <div id="card">
             <img src="DSC_0007_146x200_edge.jpg" alt="Josef Heidegger">
             <h1>josef heidegger</h1>
-            <h2>software engineering lead <br/> & certified scrumMaster</h2>
+            <h2>software engineering manager & certified <br/> scrum master</h2>
             <div>
                 <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | <a 
                         href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
