--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div id="card">
             <img src="DSC_0007_146x200_edge.jpg" alt="Josef Heidegger">
             <h1>josef heidegger</h1>
-            <h2>software engineering leader <br/> & certified scrum master</h2>
+            <h2>software engineering leader </h2>
+            <h3>empowering teams & enabling delivery </h3> 
             <div>
                 <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | <a 
                         href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
@@ -27,7 +28,7 @@
                         href="mailto:josef.heidegger@outlook.at">email</a>
                 </p>
             </div>
-        </div>
+        </div>        
         <!-- <div class="topright">
             <img class="right" src="DSC_0007_200x300.jpg">
             <h1 class="center">josef heidegger</h1>
