--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
             <h1 class="center">josef heidegger</h1>
             <h2 class="center">software development</h2>
             <div class="center">
-                <p> <a href="CV Josef Heidegger.pdf" download>cv</a> | 
+                <p>
                     <a href="https://www.linkedin.com/in/josef-heidegger/">linkedIn</a> | <a
-                        href="https://github.com/trailynx">github</a> | <a
-                        href="mailto:josef.heidegger@outlook.at">email</a>
+                        href="https://github.com/trailynx">github</a>
                 </p>
             </div>
         </div>
